Add audit log for sensitive operations- Implemented using aspect